# MachineDeck

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_application_registry.py  0002_application_state.py  0003_authentication.py
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/adapters/: __init__.py  runtime.py
backend/app/api/: applications.py  audit.py  auth.py  dashboard.py  log_websocket.py  system.py
backend/app/audit/: __init__.py  redaction.py  service.py
backend/app/dashboard/: __init__.py  collectors.py  ownership.py  service.py
backend/app/database/: models.py  session.py
backend/app/logging/: __init__.py  adapters.py  models.py  redaction.py  service.py
backend/app/orchestration/: __init__.py  lifecycle_service.py  port_discovery.py  ports.py  state_machine.py
backend/app/phase0/: __init__.py  cli.py  docker_probe.py  gpu.py  models.py  ports.py  registry.py  report.py  service_manager.py  system_metrics.py  websocket_app.py
backend/app/schemas/: __init__.py  applications.py  audit.py  auth.py  dashboard.py  lifecycle.py  ports.py
backend/app/security/: __init__.py  auth.py
backend/app/services/: __init__.py  applications.py
backend/app/systemd/: __init__.py  consistency.py  user_units.py
backend/config/: phase0-applications.yaml
backend/tests/integration/: test_application_api.py  test_audit_api.py  test_audit_service.py  test_authentication.py  test_dashboard_api.py  test_lifecycle_api_safety.py  test_lifecycle_service.py  test_migrations.py  test_port_service.py  (+1 more)
(+49 files in other folders)
