[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "machinedeck-phase0"
version = "0.1.0"
description = "MachineDeck Phase 0 host capability validation"
requires-python = ">=3.10"
dependencies = [
  "docker>=7.0,<8",
  "fastapi>=0.115,<1",
  "nvidia-ml-py>=12.535",
  "psutil>=5.9,<8",
  "PyYAML>=6.0,<7",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[project.scripts]
machinedeck-phase0 = "app.phase0.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
